Adjusted framework asmdef and scripts.

--- a/Editor/wtf.buddyworks.framework.asmdef
+++ b/Editor/wtf.buddyworks.framework.asmdef
@@ -1,5 +1,6 @@
 {
-    "name": "Import_v1",
+    "name": "wtf.buddyworks.framework",
+    "rootNamespace": "",
     "references": [],
     "includePlatforms": [
         "Editor"
